<resources>
    <string name="app_name">Leisure</string>
    <string name="news">News</string>
    <string name="reading">Reading</string>
    <string name="science">Science</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="shake">Shake</string>
    <string name="text_ebook">EBook</string>
    <string name="id_pos" translatable="false">position</string>
    <string name="id_url" translatable="false">url</string>
    <string name="id_html_content" translatable="false">content</string>
    <string name="daily">Daily</string>
    <string name="Text_Net_Exception">Network Exception</string>
    <string name="id_book" translatable="false">book</string>
    <string name="text_noinfo">\n\n\n\n\t\t\t\t\t\t\t\t\tSorry,No Message Here</string>
    <string name="text_debug_data">"Debug Data"</string>
    <string name="text_pubdate">"Publish Date "</string>
    <string name="id_pages">"Page "</string>
    <string name="text_price">"Price "</string>
    <string name="text_search">Search</string>
    <string name="id_search_text" translatable="false">search_text</string>
    <string name="text_search_result">Search Result</string>
    <string name="text_ok">OK</string>
    <string name="text_search_books">"  Search Books"</string>
    <string name="id_category" translatable="false">category</string>
    <string name="text_collection">Collection</string>
    <string name="text_refresh_success">Refresh Successfully</string>
    <string name="notify_remove_from_collection">Remove it from collection successful!!</string>
    <string name="id_collection" translatable="false">Collection</string>
    <string name="author_email">MummyDing@outlook.com</string>
    <string name="author_name">MummyDing</string>
    <string name="collection">Collection</string>
    <string name="pages">Page　</string>
    <string name="text_language">Language</string>
    <string name="id_language">language</string>
    <string name="text_preference">Preference</string>
    <string name="text_auto_refresh">Auto Refresh</string>
    <string name="text_auto_refresh_summary">Load data from network automatically if WIFI is connected</string>
    <string name="text_night_mode">Night Mode</string>
    <string name="text_shake_to_return">Shake to return</string>
    <string name="text_no_pic_mode">Auto save traffic</string>
    <string name="text_no_pic_mode_summary">Load pictures only if WIFI is connected</string>
    <string name="text_clear_cache">Clear Cache</string>
    <string name="text_clear_cache_summary">Clear Leisure\'s Cache</string>
    <string name="text_network">Network</string>
    <string name="text_remove">Remove</string>
    <string name="text_author">Author</string>
    <string name="about_center">FingerRead</string>
    <string name="about_introduce">FingerRead,the best easy read</string>
    <string name="about_introduce_and_help">show and help</string>
    <string name="about_developers">about me</string>
    <string name="me">Robbin</string>
    <string name="load_fail">load fail</string>
    <string name="about_open_source_libraries_list">com.squareup.retrofit2:retrofit:2.0.0-beta4\ncom.squareup.okhttp3:okhttp:3.2.0\nio.reactivex:rxandroid:1.1.0\nio.reactivex:rxjava:1.1.0\ncom.facebook.stetho:stetho:1.3.1\ncom.jakewharton:butterknife:7.0.1\ncom.github.bumptech.glide:glide:3.7.0\ncom.yalantis:phoenix:1.2.3\norg.jsoup:jsoup:1.8.3</string>
    <string name="about_function">Realization of the function</string>
    <string name="about_open_source_lis">Thanks</string>
    <string name="collect">collect</string>
    <string name="user_ame">Robbin</string>
    <string name="read">read</string>
    <string name="user_email">rongjabin@gmail.com</string>
    <string name="about_function_list">* 知乎日报、果壳网新闻、豆瓣图书数据显示\n* 以上三种详情页面展示\n* 错误界面处理\n* 上拉加载更多\n* 已读内容标记\n* 收藏功能\n* 搜索图书\n* 滑动返回\n* 分享功能\n* 夜间模式\n* 主题切换</string>

    <string-array name="langs" translatable="false">
        <item>English</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>

    <string-array name="search">
        <item>@string/text_search_by_keyword</item>
        <item>@string/text_search_by_category</item>
    </string-array>

    <string-array name="swipe_back">
        <item>@string/text_anywhere</item>
        <item>@string/text_left_only</item>
    </string-array>

    <string name="text_search_by_keyword">Search By Keyword</string>
    <string name="text_search_by_category">Search By Category</string>

    <string name="text_left_only">Left Only</string>
    <string name="text_anywhere">Anywhere</string>

    <string name="text_clear_cache_successful">Cache Clear Successfully!</string>
    <string name="text_exit_confirm">Exit Confirm</string>
    <string name="text_exit_confirm_summary">Press back key twice to exit</string>
    <string name="notify_exit_confirm">press again to exit</string>
    <string name="text_current_version">Current Version</string>
    <string name="text_share_leisure">Share Leisure</string>
    <string name="text_check_update">Check Update</string>
    <string name="text_good_job">Good Job</string>
    <string name="text_good_job_summary">Give me a star at https://github.com/MummyDing/Leisure</string>
    <string name="text_blog">Blog</string>
    <string name="author_blog">http://blog.csdn.net/mummyding</string>
    <string name="text_author_github">Author GitHub</string>
    <string name="author_github">https://github.com/MummyDing</string>
    <string name="text_copyright">Copyright</string>
    <string name="text_data">Data</string>
    <string name="text_email">E-Mail</string>
    <string name="text_data_summary">The data are from public API,all rights belong to original author</string>
    <string name="text_attention">Attention</string>
    <string name="text_attention_summary">This app is not allowed for COMMERCIAL Purposes</string>
    <string name="text_license">License</string>
    <string name="leisure_version">Leisure Version 2.1</string>
    <string name="notify_current_is_latest">Current Version is the latest Version</string>
    <string name="notify_find_new_version">"Find new Version "</string>
    <string name="notif_info_copied">Info copied to Clipboard! You can paste it to an edit area</string>
    <string name="project_url">https://github.com/MummyDing/Leisure/</string>
    <string name="text_share_info">Welcome to use Leisure,it contains Zhihu Daily,Guokr Scientific,XinhuaNet News and Douban Books.You can download it at http://coolapk.com/apk/com.mummyding.app.leisure</string>
    <string name="text_demo_video">Demo Video</string>
    <string name="text_app_intro">App Introduction</string>
    <string name="id_title">title</string>
    <string name="id_body">body</string>
    <string name="id_imageurl">imageUrl</string>
    <string name="id_id">id</string>
    <string name="hint_share_to">Share to...</string>
    <string name="share">share</string>
    <string name="text_share_from">"share from "</string>
    <string name="notify_add_to_collection">add to collection successful</string>
    <string name="id_small_image">id_small_image</string>
    <string name="id_science">id_science</string>
    <string name="text_hot"> hot </string>
    <string name="id_swipe_back">swipe_back</string>
    <string name="text_swipe_to_return">Swipe to Return</string>
    <string name="text_day_mode">Day Mode</string>
    <string name="hint_fail_check_update">Fail to get version info,please check your network setting</string>
</resources>
