<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.robbin.fingerread.ui.activity.AboutActivity">
<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    >
<android.support.design.widget.CollapsingToolbarLayout
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:id="@+id/collapsing_toolbar"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:contentScrim="?attr/colorPrimary"
    app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle.About"
    app:layout_scrollFlags="scroll|exitUntilCollapsed"
    >
    <!--fitsSystemWindows 根据系统的布局调整
    contentScrim：toolbar折叠后的颜色
    app:layout_scrollFlags
    pin :toolbar折叠的最后固定在顶端
    app:layout_scrollFlags
            Scroll, 表示向下滚动列表时候,CollapsingToolbarLayout会滚出屏幕并且消失
               exitUntilCollapsed, 表示这个layout会一直滚动离开屏幕范围,直到它收折成它的最小高度.
    app:layout_collapseMode="parallax",这是控制滚出屏幕范围的效果的
     1) parallax,表示滚动过程中,会一直保持可见区域在正中间.
     2) pin,表示不会被滚出屏幕范围.
    -->
    <LinearLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/user_logo"
            android:scaleType="fitCenter"
            app:riv_corner_radius="20dip"
            app:riv_border_width="0dip"
            android:layout_marginLeft="10dp"
            app:riv_oval="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/about_center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="1.0"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:theme="@style/MyToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>


</android.support.design.widget.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_introduce_and_help"
                android:textColor="#000"
                android:textSize="@dimen/about_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/about_introduce"
                    android:textColor="#000"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/about_developers"
                android:textColor="#000"
                android:textSize="@dimen/about_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_avator_blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/me"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tv_avator_blog"
                    android:layout_toRightOf="@id/tv_avator_blog"
                    android:autoLink="web"
                    android:text="laucherish"
                    android:textColor="#000"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_avator_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_avator_blog"
                    android:layout_below="@id/tv_avator_blog"
                    android:text="GitHub: "
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tv_avator_github"
                    android:layout_toRightOf="@id/tv_avator_github"
                    android:autoLink="web"
                    android:text="https://github.com/RobbinRong"
                    android:textColor="#000" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/about_function"
                android:textColor="#000"
                android:textSize="@dimen/about_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_function_list"
                    android:textColor="#000"
                    android:textSize="@dimen/open_source_lis_text_size"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/about_open_source_lis"
                android:textColor="#000"
                android:textSize="@dimen/about_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_open_source_libraries_list"
                    android:textColor="#000"
                    android:textSize="@dimen/open_source_lis_text_size"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
